--- a/app/src/main/res/layout/intro_page.xml
+++ b/app/src/main/res/layout/intro_page.xml
@@ -36,8 +36,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/the_hands_free_fishing_log"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/clip_blue"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"/>
 
@@ -46,8 +48,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Just Say the Word"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/clip_blue"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"/>
 
@@ -56,8 +60,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="and you can"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/clip_blue"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"/>
 
@@ -66,10 +72,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Track Your Catch"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:textColor="@color/clip_blue"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/voice_commands_or_manual_input"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textColor="@color/clip_blue"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:layout_marginTop="10dp" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
