Need Some Clarification with Fold locations...

--- a/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
+++ b/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
@@ -48,6 +48,8 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
         android:text="@string/goto_SetUp_description"
+        android:background="@drawable/btn_outline_grey"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtLbs" />
 
