--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -16,17 +16,14 @@
         android:id="@+id/imageView"
         android:layout_width="235dp"
         android:layout_height="61dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/app_image_description"
-        android:scaleX="1.5"
+        android:scaleX=".8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/timeNOW"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:srcCompat="@drawable/voice_controlled_culling_words" />
+        app:srcCompat="@drawable/catch_call_words_blue"  />
 
     <TextClock
         android:id="@+id/timeNOW"
@@ -383,7 +380,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
@@ -399,7 +396,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/secondDecWeight"
         app:layout_constraintTop_toBottomOf="@id/firstDecWeight"
@@ -415,7 +412,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/secondDecWeight"
@@ -431,7 +428,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
@@ -447,7 +444,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
         app:layout_constraintTop_toBottomOf="@id/fourthDecWeight"
@@ -463,7 +460,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.1"
         app:layout_constraintStart_toEndOf="@id/firstDecWeight"
