--- a/app/src/main/res/layout/activity_tournament_view_centimeters.xml
+++ b/app/src/main/res/layout/activity_tournament_view_centimeters.xml
@@ -34,17 +34,14 @@
         android:id="@+id/imageView"
         android:layout_width="235dp"
         android:layout_height="61dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/app_image_description"
-        android:scaleX="1.5"
+        android:scaleX=".8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/timeNOW"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:srcCompat="@drawable/voice_controlled_culling_words" />
+        app:srcCompat="@drawable/catch_call_words_blue" />
 
     <Button
         android:id="@+id/btnAlarmCms"
@@ -383,7 +380,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/btnStartFishingCms"
@@ -398,7 +395,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/secondDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/firstDecLengthCms"
@@ -413,7 +410,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/secondDecLengthCms"
@@ -428,7 +425,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/thirdDecLengthCms"
@@ -443,7 +440,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/fourthDecLengthCms"
@@ -458,7 +455,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintStart_toEndOf="@id/firstDecLengthCms"
         app:layout_constraintTop_toBottomOf="@id/fifthDecLengthCms"
