--- a/app/src/main/res/layout/activity_all_species_selection.xml
+++ b/app/src/main/res/layout/activity_all_species_selection.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
     android:contentDescription="@string/user_can">
-
+>
 
     <LinearLayout
         android:id="@+id/llSpeciesAddition"
@@ -123,4 +123,4 @@
             android:textSize="22sp"
             android:textStyle="bold" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
