--- a/app/src/main/res/layout/activity_tournament_view_kgs.xml
+++ b/app/src/main/res/layout/activity_tournament_view_kgs.xml
@@ -32,17 +32,14 @@
         android:id="@+id/imageView"
         android:layout_width="235dp"
         android:layout_height="61dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/app_image_description"
-        android:scaleX="1.5"
+        android:scaleX=".8"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintHorizontal_bias="0.8"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/timeNOW"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.4"
-        app:srcCompat="@drawable/voice_controlled_culling_words" />
+        app:srcCompat="@drawable/catch_call_words_blue"  />
 
 
     <Button
@@ -534,6 +531,7 @@
         android:textScaleX="0.3"
         android:textSize="60sp"
         android:textStyle="bold"
+        android:layout_marginStart="5dp"
         app:layout_constraintBottom_toBottomOf="@id/totalDecWeightKgs"
         app:layout_constraintStart_toEndOf="@id/totalDecWeightKgs" />
 
