--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,6 +63,7 @@
     <color name="unselected_background">#FFFFFF</color>
     <color name="selected_2_background">#CCFF90</color> <!-- Light green -->
 
+    <color name="material_dynamic_primary70">#72B0D1</color>
 
     <color name="ic_launcher_background">#FFBB00</color>
 
