--- a/app/src/main/res/layout/list_item_catch.xml
+++ b/app/src/main/res/layout/list_item_catch.xml
@@ -3,7 +3,17 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@color/lite_grey">
+
+    <CheckBox
+        android:id="@+id/chkSelectSpecies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
     <ImageView
         android:id="@+id/imgSpecies"
@@ -11,12 +21,14 @@
         android:layout_height="48dp"
         android:layout_marginEnd="12dp"
         android:scaleType="centerInside"
-        android:contentDescription="Fish species image" />
+        android:contentDescription="@string/fish_species_image" />
 
     <TextView
-        android:id="@+id/txtCatchInfo"
-        android:layout_width="wrap_content"
+        android:id="@+id/txtSpeciesName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#000000"/>
+        android:layout_weight="1"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 </LinearLayout>
