--- a/app/src/main/res/layout/activity_set_up_event.xml
+++ b/app/src/main/res/layout/activity_set_up_event.xml
@@ -13,31 +13,36 @@
     tools:context=".SetUpActivity">
 
     <!-- Header Images -->
+    <ImageView
+        android:id="@+id/imgVCC"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="5dp"
+        android:contentDescription="@string/app_image_description"
+        android:src="@drawable/catch_call_words_blue"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <LinearLayout
         android:id="@+id/headerImagesLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">  <!-- ✅ Position at the top -->
+        app:layout_constraintTop_toBottomOf="@id/imgVCC" >
 
-        <ImageView
-            android:id="@+id/imgVCC"
-            android:layout_width="90dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="5dp"
-            android:contentDescription="@string/app_image_description"
-            android:src="@drawable/voice_controlled_culling_words"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/imgSetUp"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
-
             android:layout_marginStart="20dp"
             android:adjustViewBounds="true"
+            android:layout_gravity="center"
             android:contentDescription="@string/gps_usage_permission"
             android:src="@drawable/set_up_word_stoked" />
 
