--- a/app/src/main/res/layout/item_species_select.xml
+++ b/app/src/main/res/layout/item_species_select.xml
@@ -5,23 +5,24 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/dragHandle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_drag_handle"
-        android:contentDescription="@string/drag_handle"
-        android:layout_marginStart="12dp"
-        android:layout_gravity="center_vertical"/>
+
+    <CheckBox
+        android:id="@+id/chkSelectSpeciesNameSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
     <ImageView
-        android:id="@+id/imgSpecies"
+        android:id="@+id/imgSpeciesSelect"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="8dp" />
 
     <TextView
-        android:id="@+id/txtSpeciesName"
+        android:id="@+id/txtSpeciesNameSelect"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
