--- a/app/src/main/res/layout/activity_species_selection.xml
+++ b/app/src/main/res/layout/activity_species_selection.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="7dp"
             android:background="@drawable/btn_outline_blue"
             android:enabled="false"
             android:padding="15dp"
@@ -71,12 +71,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="7dp"
             android:padding="15dp"
             android:background="@drawable/btn_outline_green"
             android:text="Adjust the Species List"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnResetSpecies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="7dp"
+            android:padding="15dp"
+            android:background="@drawable/btn_outline_red"
+            android:text="Reset the Species List"
+            android:textColor="@color/black"
+            android:textSize="22sp"
+            android:textStyle="bold"/>
     </LinearLayout>
 </ScrollView>
