--- a/app/src/main/res/layout/list_item_catch.xml
+++ b/app/src/main/res/layout/list_item_catch.xml
@@ -1,34 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp"
+    android:background="@color/silver"
     android:gravity="center_vertical"
-    android:background="@color/lite_grey">
+    android:orientation="horizontal"
+    android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/dragHandleListItem"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_drag_handle"
-        android:contentDescription="@string/drag_handle"
-        android:layout_marginStart="12dp"
-        android:layout_gravity="center_vertical"/>
 
     <ImageView
         android:id="@+id/imgSpeciesListItem"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="12dp"
-        android:scaleType="centerInside"
-        android:contentDescription="@string/fish_species_image" />
+        android:contentDescription="@string/fish_species_image"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/txtSpeciesNameListItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="20sp"
         android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
