--- a/app/src/main/res/layout/activity_species_selection.xml
+++ b/app/src/main/res/layout/activity_species_selection.xml
@@ -51,45 +51,74 @@
             tools:listitem="@layout/item_species_select" />
 
         <!-- Save Button -->
-        <Button
-            android:id="@+id/btnSaveSpecies"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="7dp"
-            android:background="@drawable/btn_outline_blue"
-            android:enabled="false"
-            android:padding="15dp"
-            android:text="@string/save_selection"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="25sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnSaveSpecies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/btn_outline_blue"
+                android:enabled="false"
+                android:padding="5dp"
+                android:text="@string/save_selection"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnAdjustSpeciesList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/btn_outline_green"
+                android:padding="5dp"
+                android:text="Adjust the Species List"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <!-- Add Custom Species -->
-        <Button
-            android:id="@+id/btnAdjustSpeciesList"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="7dp"
-            android:padding="15dp"
-            android:background="@drawable/btn_outline_green"
-            android:text="Adjust the Species List"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnResetSpecies"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="7dp"
-            android:padding="15dp"
-            android:background="@drawable/btn_outline_red"
-            android:text="Reset the Species List"
-            android:textColor="@color/black"
-            android:textSize="22sp"
-            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnResetSpecies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/btn_outline_red"
+                android:padding="5dp"
+                android:layout_marginEnd="10dp"
+                android:text="Reset the Species List"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnCancelSpecies"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/btn_outline_grey"
+                android:padding="15dp"
+                android:text="@string/cancel"
+                android:textColor="@color/clip_blue"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
