--- a/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
+++ b/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
@@ -9,7 +9,18 @@
     android:layout_height="match_parent"
     tools:context=".CatchEntryLbsOzs">
 
-                <!-- Page Label -->
+
+    <ImageView
+        android:id="@+id/imgBassCatchLbs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:alpha="0.25"
+        app:srcCompat="@drawable/bass_jumping_boater_no_backing" />
+
+    <!-- Page Label -->
     <TextView
         android:id="@+id/txtTodaysLog"
         android:layout_width="wrap_content"
