--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#801976D2"
@@ -19,14 +24,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.10"
+        app:layout_constraintVertical_bias="0.05"
         app:srcCompat="@drawable/catch_call_tracker_angler_main" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:text="Start the Fishing Day"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -39,7 +44,7 @@
         android:id="@+id/btnSetUp11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+
         android:background="@drawable/btn_outline_blue"
         android:gravity="center"
         android:paddingHorizontal="15dp"
@@ -48,15 +53,14 @@
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@id/textView6" />
 
     <View
         android:id="@+id/divider6"
         android:layout_width="0dp"
         android:layout_height="5dp"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="5dp"
         android:background="@color/black"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,31 +68,73 @@
         app:layout_constraintTop_toBottomOf="@id/btnSetUp11" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/txtGoogleMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check out the How To Pages"
+        android:text="@string/look_up_your_catches_on_google_maps"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider6"/>
 
     <Button
-        android:id="@+id/btnManualControls"
+        android:id="@+id/btnLookUpMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_outline_red"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/btn_outline_yellow"
         android:gravity="center"
-        android:paddingHorizontal="15dp"
-        android:text="Manual Controls"
+        android:paddingHorizontal="10dp"
+        android:text="@string/look_up_map"
         android:textColor="@color/clip_blue"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtGoogleMap" />
+
+    <View
+        android:id="@+id/divider10"
+        android:layout_width="0dp"
+        android:layout_height="5dp"
+        android:layout_marginVertical="5dp"
+        android:background="@color/black"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnLookUpMap"
+        />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/check_out_the_how_to_pages"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider10"/>
+
+    <Button
+        android:id="@+id/btnManualControls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/btn_outline_red"
+        android:gravity="center"
+        android:paddingHorizontal="15dp"
+        android:text="@string/manual_controls"
+        android:textColor="@color/clip_blue"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView17" />
 
@@ -104,11 +150,24 @@
         app:layout_constraintTop_toBottomOf="@id/btnManualControls" />
 
 
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/learn_about_voice_controls"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider7"/>
+
     <Button
         android:id="@+id/btnVCC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:layout_marginVertical="5dp"
         android:paddingHorizontal="15dp"
         android:background="@drawable/btn_outline_green"
         android:gravity="center"
@@ -118,7 +177,9 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider7" />
+        app:layout_constraintTop_toBottomOf="@id/textView15" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
