--- a/app/src/main/res/layout/activity_set_up_event.xml
+++ b/app/src/main/res/layout/activity_set_up_event.xml
@@ -40,11 +40,11 @@
         <ImageView
             android:id="@+id/imgSetUp"
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_marginStart="20dp"
-            android:adjustViewBounds="true"
+            android:layout_height="60dp"
             android:layout_gravity="center"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/select_the_type_of_fishig"
+            android:scaleX="1.35"
             android:src="@drawable/set_up_word_stoked" />
 
     </LinearLayout>
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:gravity="center"
-            android:text="Type of Measuring"
+            android:text="@string/type_of_measuring"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -88,7 +88,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/softlock_green"
-                android:text="Weight"
+                android:text="@string/weight"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -98,7 +98,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/clip_yellow"
-                android:text="Length"
+                android:text="@string/length"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -119,7 +119,7 @@
                 android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="Type of Units"
+                android:text="@string/type_of_units"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -138,7 +138,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/Log_blue_secondary"
-                android:text="Imperial"
+                android:text="@string/imperial"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -148,7 +148,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/bright_green"
-                android:text="Metric"
+                android:text="@string/metric"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -166,7 +166,7 @@
                 android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="Type of Fishing Day"
+                android:text="@string/type_of_fishing_day"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -186,7 +186,7 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@color/clip_orange"
-                android:text="Fun Day"
+                android:text="@string/fun_day"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -197,7 +197,7 @@
                 android:layout_weight="1"
                 android:background="@color/very_bright_red"
                 android:drawableBottom="@drawable/button_outline"
-                android:text="Tournament"
+                android:text="@string/tournament"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -213,6 +213,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
+            android:id="@+id/llCulling"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -230,21 +231,55 @@
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="15dp"
                 android:gravity="center"
-                android:text="Culling Limit#"
+                android:text="@string/culling_limit"
                 android:textColor="@color/black"
                 android:textSize="26sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="15dp"
+                android:scaleX="1.25"
+                android:text="@string/spacers"
+                android:textColor="@color/black"
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txtSpeciesSelector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tournament_species"
+                android:textColor="@color/black"
+                android:textSize="26sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llValues"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center" >
+
+            <!-- Culling Limit  -->
+
             <ToggleButton
                 android:id="@+id/tglCullingValue"
-                android:layout_width="65dp"
+                android:layout_width="55dp"
                 android:layout_height="60dp"
-                android:layout_marginTop="2dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="30dp"
                 android:background="@color/Log_white"
+                android:gravity="center"
                 android:shadowColor="@color/Log_red"
-                android:textColor="@color/black"
-                android:textOff="4"
-                android:textOn="5"
+                android:textColor="@color/clip_blue"
+                android:textOff="@string/_4"
+                android:textOn="@string/_5"
                 android:textSize="45sp"
                 android:textStyle="bold"
                 android:visibility="visible"
@@ -253,7 +288,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/txtTourneyValue"
                 app:layout_constraintWidth="wrap_content" />
 
-
+            <!-- Targeted Species for Tournament  -->
+            <Spinner
+                android:id="@+id/spinnerTournamentSpecies"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="25dp"
+                android:background="@color/clip_white"
+                android:entries="@array/species_list"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <View
@@ -271,33 +316,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <!--CanAm Flag -->
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" GPS"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:scaleX="1.25"
-                android:text="- - "
+                android:text="@string/log_catch_location"
                 android:textColor="@color/black"
                 android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/txtSpeciesSelector"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tournament_species"
-                android:textColor="@color/black"
-                android:textSize="26sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -309,6 +333,8 @@
             android:gravity="center"
             android:orientation="horizontal">
 
+            <!-- GPS Enable/Disable -->
+
             <ToggleButton
                 android:id="@+id/tglGPS"
                 android:layout_width="wrap_content"
@@ -316,34 +342,18 @@
                 android:background="@drawable/btn_outline_red"
                 android:contentDescription="@string/gps_info"
                 android:fontFamily="sans-serif-medium"
+                android:layout_marginStart="10dp"
                 android:paddingStart="24dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="24dp"
                 android:paddingBottom="12dp"
                 android:textColor="@color/black"
-                android:textOff="OFF"
-                android:textOn="ON"
+                android:textOff="@string/disabled"
+                android:textOn="@string/enabled"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" --"
-                android:textColor="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerTournamentSpecies"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="10dp"
-                android:background="@color/clip_white"
-                android:entries="@array/species_list"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
 
 
         </LinearLayout>
@@ -365,19 +375,15 @@
             android:orientation="horizontal">
 
             <!-- Go to Catch Page Button -->
-
             <Button
                 android:id="@+id/btnStartFishing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginBottom="7dp"
                 android:background="@drawable/btn_outline_green"
                 android:fontFamily="sans-serif-medium"
-                android:paddingStart="24dp"
-                android:paddingTop="6dp"
-                android:paddingEnd="24dp"
-                android:paddingBottom="6dp"
+                android:padding="7dp"
                 android:text="@string/start_fishing_event"
                 android:textColor="@color/black"
                 android:textSize="22sp"
@@ -403,6 +409,7 @@
             android:gravity="center"
             android:orientation="horizontal" >
 
+            <!-- MAIN Menu Page  -->
             <Button
                 android:id="@+id/btnMainSetup"
                 android:layout_width="wrap_content"
@@ -414,6 +421,7 @@
                 android:textColor="@color/black"
                 android:padding="5dp"/>
 
+            <!-- Customize Species Pages  -->
                <Button
                 android:id="@+id/btnCustomizeSpecies"
                 android:layout_width="wrap_content"
