--- a/app/src/main/res/layout/activity_species_selection.xml
+++ b/app/src/main/res/layout/activity_species_selection.xml
@@ -54,7 +54,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/btnSaveSpecies"
@@ -68,7 +70,7 @@
                 android:padding="5dp"
                 android:text="@string/save_selection"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <Button
@@ -79,9 +81,9 @@
                 android:layout_marginTop="7dp"
                 android:background="@drawable/btn_outline_green"
                 android:padding="5dp"
-                android:text="Adjust the Species List"
+                android:text="Adjust Species List"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
@@ -90,7 +92,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/btnResetSpecies"
@@ -103,7 +107,7 @@
                 android:layout_marginEnd="10dp"
                 android:text="Reset the Species List"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <Button
@@ -116,7 +120,7 @@
                 android:padding="15dp"
                 android:text="@string/cancel"
                 android:textColor="@color/clip_blue"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
