--- a/app/src/main/res/layout/list_item_catch.xml
+++ b/app/src/main/res/layout/list_item_catch.xml
@@ -1,10 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/silver"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@drawable/box_outline">
 
 
     <ImageView
