--- a/app/src/main/res/layout/user_training_voice_commands.xml
+++ b/app/src/main/res/layout/user_training_voice_commands.xml
@@ -8,195 +8,207 @@
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/softlock_green">
-
-    <ImageView
-        android:id="@+id/imgVCC"
-        android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:contentDescription="@string/app_image_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/catch_call_words_blue" />
-
-    <LinearLayout
-        android:id="@+id/ManualMode1linearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgVCC">
+        android:layout_height="match_parent"
+        android:background="@color/softlock_green">
 
-        <TextView
-            android:id="@+id/textView4"
+
+        <ImageView
+            android:id="@+id/imgBassVoice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:alpha="0.25"
+            app:srcCompat="@drawable/bass_jumping_boater_no_backing" />
+
+        <ImageView
+            android:id="@+id/imgVCC"
+            android:layout_width="0dp"
+            android:layout_height="85dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:contentDescription="@string/app_image_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/catch_call_words_blue" />
+
+        <LinearLayout
+            android:id="@+id/ManualMode1linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingHorizontal="25dp"
-            android:layout_marginTop="15dp"
-            android:text="@string/using_voice_controls"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgVCC">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:paddingHorizontal="25dp"
+                android:text="@string/using_voice_controls"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginVertical="15dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ManualMode1linearLayout" />
+        </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/llSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider">
-
-        <TextView
-            android:id="@+id/textView8"
+        <View
+            android:id="@+id/divider"
             android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ManualMode1linearLayout" />
+
+        <LinearLayout
+            android:id="@+id/llSelect"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
             android:layout_weight="1"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"
-            android:text="@string/select_the_button_for_each_topic"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:text="@string/select_the_button_for_each_topic"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:layout_marginVertical="15dp"
+            android:background="@color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llSelect" />
+
+        <Button
+            android:id="@+id/btnWhatIsVCC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/btn_outline_green"
+            android:padding="15dp"
+            android:text="What is Voice Command Control"
+            android:textColor="@color/clip_blue"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:typeface="serif" />
-    </LinearLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider2" />
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginVertical="15dp"
-        android:background="@color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/llSelect" />
-
-    <Button
-        android:id="@+id/btnWhatIsVCC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/btn_outline_green"
-        android:padding="15dp"
-        android:text="What is Voice Command Control"
-        android:textColor="@color/clip_blue"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider2" />
-
-    <Button
+        <Button
             android:id="@+id/btnEnableVCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:background="@drawable/btn_outline_red"
+            android:padding="15dp"
             android:text="@string/enabling_voice_controls"
             android:textColor="@color/clip_blue"
             android:textSize="20sp"
-            android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnWhatIsVCC"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintTop_toBottomOf="@id/btnWhatIsVCC" />
 
         <Button
             android:id="@+id/btnTeachVCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:background="@drawable/btn_outline_blue"
+            android:padding="15dp"
             android:text="Teaching Voice Control"
             android:textColor="@color/clip_blue"
             android:textSize="20sp"
-            android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnEnableVCC"
-            android:layout_marginTop="15dp" />
+            app:layout_constraintTop_toBottomOf="@id/btnEnableVCC" />
 
-    <View
-        android:id="@+id/divider9"
-        android:layout_width="0dp"
-        android:layout_height="5dp"
-        android:layout_marginVertical="15dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/black"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnTeachVCC"/>
+        <View
+            android:id="@+id/divider9"
+            android:layout_width="0dp"
+            android:layout_height="5dp"
+            android:layout_marginVertical="15dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/black"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnTeachVCC" />
 
 
-    <LinearLayout
+        <LinearLayout
 
-        android:id="@+id/llButtons5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:paddingVertical="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/divider9">
-
-        <Button
-            android:id="@+id/btnMenuUser"
+            android:id="@+id/llButtons5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:background="@drawable/btn_outline_red"
-            android:text="@string/menu"
-            android:textAllCaps="true"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:paddingVertical="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider9">
 
-        <Button
-            android:id="@+id/btnSetUpUser"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight=".4"
-            android:background="@drawable/btn_outline_green"
-            android:text="@string/img_setup"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <Button
+                android:id="@+id/btnMenuUser"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight=".4"
+                android:background="@drawable/btn_outline_red"
+                android:text="@string/menu"
+                android:textAllCaps="true"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnSetUpUser"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight=".4"
+                android:background="@drawable/btn_outline_green"
+                android:text="@string/img_setup"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
